Revise map help text and fix sidebar overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -387,11 +387,11 @@ svg:not(:root) {
     right: 10px;
     width: auto;
     max-width: 480px;
+    overflow: hidden;
     z-index: 1000;
     background-color: transparent;
     box-shadow: none;
-    overflow: hidden;
-    height: 100%;
+    height: fit-content;
 }
 
 /* Style the menu item area with white background */
@@ -430,7 +430,8 @@ svg:not(:root) {
     .sidebar {
         top: 10px;
         right: 10px;
-        height: calc(100% - 60px);
+        overflow:hidden;
+        height: fit-content;
         transition: width 500ms;
     }
 
@@ -442,6 +443,7 @@ svg:not(:root) {
         max-width: 480px;
         width: 100%;
         transition: width 1s;
+        overflow:hidden;
     }
 }
 
@@ -544,7 +546,6 @@ svg:not(:root) {
     pointer-events: none;
     margin-bottom: 15px;
     transition: opacity 500ms;
-    overflow: auto;
     font-size: 14px;
     font-family: "Poppins", sans-serif;
 }
